removed flashing not showing text bug

--- a/animation-test-style.css
+++ b/animation-test-style.css
@@ -2,3 +2,7 @@
 	position: absolute;
 	width: 1000px;
 }
+
+#padding {
+	height: 30px;
+}
